# ok-edu-desktop-github

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt  res.qrc  translations.qrc
UI/: CMakeLists.txt  WindowManager.cpp  WindowManager.h  resources.cpp  resources.h
UI/component/: OCountDown.cpp  OCountDown.h  OCountDown.ui  OMainMenu.cpp  OMainMenu.h  OMainMenu.ui  OMainTitleBar.cpp  OMainTitleBar.h  OMainTitleBar.ui  OPlayerController.cpp  OPlayerController.h  OPlayerController.ui  OPlayerWidget.cpp  OPlayerWidget.h  OPlayerWidget.ui  OTitleBar.cpp  OTitleBar.h  OTitleBar.ui  OTitleClose.cpp  OTitleClose.h  OTitleClose.ui  OVideoPlayer.cpp  OVideoPlayer.h  OVideoPlayer.ui  OVideoWidget.cpp  OVideoWidget.h  OVideoWidget.ui
UI/core/: CMakeLists.txt  ControllerManager.cpp  ControllerManager.h  FontManager.cpp  FontManager.h  I18N.cpp  I18N.h  SettingManager.cpp  SettingManager.h  ui.h
UI/dialog/: CMakeLists.txt  DialogUtils.cpp  DialogUtils.h  VideoPlayerDialog.cpp  VideoPlayerDialog.h  VideoPlayerDialog.ui  progressdialog.cpp  progressdialog.h
UI/multimedia/: CMakeLists.txt  Camera.cpp  Camera.h
UI/resources/: resources.qrc
UI/resources/style/qss/: banner.qss  login.qss  menu.qss
UI/tool/: callconfirmwidget.cpp  chattextedit.cpp  identicon.cpp  profileimporter.cpp  removefrienddialog.cpp  removefrienddialog.h  screenshotgrabber.cpp
UI/widget/: CMakeLists.txt  MoveableBar.cpp  MoveableBar.h
UI/widget/tool/: movablewidget.cpp
UI/window/: BaseWindow.cpp  BaseWindow.h  CMakeLists.txt  translations_UIWindow.qrc  whiteboard.cpp  whiteboard.h  widgetfactory.cpp  widgetfactory.h
UI/window/layout/: FlowLayout.cpp  FlowLayout.h
UI/window/page/: Page.cpp  Page.h  PageFactory.h  SettingsPage.cpp  SettingsPage.h  calendar.cpp  calendar.h  email.cpp  email.h  personal.cpp  personal.h  welcome.cpp  welcome.h
UI/window/style/: MaskLabel.cpp  MaskLabel.h
UI/window/translations/: ar.ts  de.ts  es.ts  fr.ts  it.ts  ja.ts  ko.ts  pt.ts  ru.ts  zh_CN.ts  zh_TW.ts
UI/window/widget/: BannerWidget.cpp  BannerWidget.h  LoginTitleBar.cpp  LoginTitleBar.h  LoginWidget.cpp  LoginWidget.h  LoginWidget.ui  MaterialView.cpp  MaterialView.h  OResizeWidget.cpp  OResizeWidget.h  OWebView.cpp  OWebView.h  OWidget.cpp  OWidget.h  PluginInfoForm.cpp  PluginInfoForm.h  PluginItemForm.cpp  PluginItemForm.h  PluginManagerForm.cpp  PluginManagerForm.h  SettingItem.cpp  SettingItem.h  SettingView.cpp  SettingView.h  VideoWidget.cpp  VideoWidget.h  WhiteboardWidget.cpp  WhiteboardWidget.h  loginform.cpp  loginform.ui  playerwidget.cpp  playerwidget.h
UI/window/window/: LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  OWindow.cpp  OWindow.h  RoomSelectDialog.cpp  RoomSelectDialog.h  VideoPlayer.cpp  VideoPlayer.h  VideoPlayer.ui
base/: CMakeLists.txt  OkAccount.cpp  OkAccount.h  StringUtils.cpp  StringUtils.h  applicationinfo.cpp  autorun.h  basic_types.h  colorhelper.h  compatiblerecursivemutex.h  files.cpp  files.h  hashs.cpp  hashs.h  images.h  jid.cpp  jid.h  jsons.h  logs.cpp  logs.h  qbasic_types.h  r.h  (+12 more)
base/zip/: CMakeLists.txt
lib/messenger/: CMakeLists.txt  IM.cpp  IM.h  IMConference.cpp  IMConference.h  IMFile.cpp  IMFile.h  IMJingle.cpp  IMJingle.h  IMJingleSession.cpp  IMJingleSession.h  IMMessage.cpp  IMMessage.h  IMRoomHelper.cpp  IMRoomHelper.h  imjinglehandler.h  messenger.cpp  messenger.h
lib/messenger/tox/: tox.h  toxav.h
lib/network/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.h  NetworkHttp.cpp  NetworkHttp.h  NetworkManager.cpp  NetworkManager.h  UserObserver.h  network.h
lib/network/backend/: BaseService.cpp  BaseService.h  BookedService.cpp  BookedService.h  CMakeLists.txt  ChatService.cpp  ChatService.h  HttpService.cpp  HttpService.h  PassportService.cpp  PassportService.h  PushService.cpp  PushService.h  User.cpp  User.h  UserService.cpp  UserService.h
lib/network/backend/domain/: AuthInfo.h  RoomInfo.h  UserInfo.h
lib/network/messenger/: message.cpp  message.h
lib/network/smartboard/: CMakeLists.txt  imsmartboard.cpp  imsmartboard.h
lib/plugin/: CMakeLists.txt  OkOptions.cpp  OkOptions.h  PluginInfo.cpp  PluginInfo.h  coloropt.cpp  common.cpp  common.h  ok_iconset.cpp  ok_iconset.h  optionstree.cpp  pluginhost.cpp  pluginhost.h  pluginmanager.cpp  pluginmanager.h  textutil.cpp
lib/plugin/iconset/: anim.cpp  iconset.cpp
lib/settings/: CMakeLists.txt  OkSettings.cpp  OkSettings.h  translator.cpp  translator.h
lib/smartboard/: CMakeLists.txt  imsmartboard.cpp  imsmartboard.h  smartboard.cpp  smartboard.h  smartboardcontroller.cpp  smartboardcontroller.h  smartboardcontrollerselect.cpp  smartboardcontrollerselect.h  smartboardcontrollervoice.cpp  smartboardcontrollervoice.h  smartboarddraw.cpp  smartboarddraw.h  smartboarddrawfile.cpp  smartboarddrawfile.h  smartboarddrawline.cpp  smartboarddrawline.h  smartboarddrawmove.cpp  smartboarddrawmove.h  smartboarddrawremove.cpp  smartboarddrawremove.h  smartboarddrawtext.cpp  smartboarddrawtext.h
modules/painter/: Base.h  CMakeLists.txt  ColorPanel.cpp  ColorPanel.h  DefferedCaller.cpp  DefferedCaller.h  OPainterColorPanel.cpp  OPainterColorPanel.h  OPainterColorPanel.ui  OPainterToolBox.cpp  OPainterToolBox.h  OPainterToolBox.ui  OPainterViewport.cpp  OPainterViewport.h  OPainterViewport.ui  OVideoViewport.cpp  OVideoViewport.h  OVideoViewport.ui  OkGraphicsTextItem.cpp  OkGraphicsTextItem.h  PacketCodeDefine.h  PageClassing.cpp  PageClassing.h  PageClassing.ui  PaintItem.h  PaintItemFactory.h  PaintPacketBuilder.h  PaintUser.h  Painter.cpp  Painter.h  PainterMdiArea.cpp  PainterMdiArea.h  PainterView.cpp  PainterView.h  PainterWidgetProxy.cpp  PainterWidgetProxy.h  SharedPaintCommand.cpp  SharedPaintCommand.h  SharedPaintCommandManager.cpp  SharedPaintCommandManager.h  (+24 more)
src/core/: CMakeLists.txt  application.cpp  application.h  ipc.cpp  launcher.cpp  launcher.h  profilelocker.cpp
src/core/base/: observer.cpp  observer.h
src/core/utils/: desktopinfo.h  filenamehandler.cpp  filenamehandler.h  screengrabber.cpp  screengrabber.h
(+298 files in other folders)
